feat: novas alterações no site do daitan aikido

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daitan Dojo - Aikido</title>
     <link rel="icon" href="daitan_aikido.png" type="image/png">
-    <meta name="description" content="Daitan Aikido - Aikido: Descubra a Arte do Aikido na Bahia. Aulas, serviços, e produtos relacionados ao Aikido.">
+    <meta name="description" content="Daitan Aikido - Aikido: Treinar e Evoluir sempre. Aulas, serviços, e produtos relacionados ao Aikido.">
     <meta name="keywords" content="Aikido, Daitan Aikido, Artes Marciais, Defesa Pessoal, Bahia">
     <link rel="canonical" href="https://www.daitanaikido.com.br/">
     <link rel="stylesheet" href="styles.css">
@@ -29,6 +29,7 @@
                 <li><a href="#produtos">Produtos</a></li>
                 <li><a href="#redes-sociais">Redes Sociais</a></li>
             </ul>
+			<div class="menu-toggle-name">MENU</div>
             <div class="menu-toggle">
                 <span></span>
                 <span></span>
@@ -39,7 +40,7 @@
 
     <div class="banner">
         <h1>Daitan Aikido</h1>
-        <p>Descubra a Arte do Aikido</p>
+        <p>Treinar e evoluir sempre</p>
     </div>
 
     <div class="container">
@@ -76,7 +77,7 @@
                     <p>Criado em 2022 pelo Sensei Uerlison Simões, o Daitan Aikido surgiu de uma paixão pela arte
                         marcial e a vontade de difundir o Aikido na Bahia. Teve como primeira sede o Clube da APPM,
                         localizado em Lauro de Freitas. Contou com o apoio fundamental dos Aikidocas Cristiano Tosta de
-                        Salvador/BA, João Ricardo e Igor de Feira de Santana/BA e Denilton de Camaçari/BA. Essa união
+                        Salvador/BA, João Ricardo e Igor de Feira de Santana/BA. Essa união
                         foi fundamental para a criação e fortalecimento do grupo.
 						As aulas ocorrem em dias e horários diferentes em cada uma das sedes, de acordo com as
                         características da localidade e demandas dos alunos e Senseis responsáveis. 
@@ -130,6 +131,7 @@
 			<h2>Dojo</h2>
 			<div class="content-section">
 				<ul class="dojos-list">
+				<ul class="dojos-list">
 					<li>
 						<div class="dojos-location">
 							<strong>Lauro de Freitas:</strong>&nbsp Clube da APPM, Av. José Leite, s/n, em frente ao Condomínio Family.
@@ -150,7 +152,7 @@
 					</li>
 					<li>
 						<div class="dojos-location">
-							<strong>Feira de Santana:</strong>&nbsp Aikidojo, Rua Miranda, 650b, Mangabeira.
+							<strong>Feira de Santana:</strong>&nbsp Dojo Benvindo, Rua Miranda, 650b, Mangabeira.
 						</div>
 						<div class="dojos-contact">
 							<a href="tel:+5575991730009">(75) 99173-0009</a>- João Ricardo Sensei
@@ -161,57 +163,85 @@
 			</div>
 		</section>
 
-
         <section id="servicos">
-            <h2>Serviços</h2>
-            <div class="servicos">
-                <div class="content-section">
-                    <ul>
-						<li title="Clique para ver a imagem" class="line" data-image="service1.jpeg">Aulas de Aikido</li> 
-                        <li title="Clique para ver a imagem" class="line" data-image="intensivos.jpeg">Treinos Intensivos</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="defesa_mulheres.jpeg">Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="ate_voce.jpeg">Aikido Até Você – Aulas em Condomínios</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="aikido_empresa.jpeg">Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="aikido_seguranca.jpeg">Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="aikido_kids.png">Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="seguranca_vip.jpeg">Segurança VIP</li>
-                        <li title="Clique para ver a imagem" class="line" data-image="intensivo_2.jpeg">Palestras</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section id="produtos">
-            <h2>Produtos</h2>
-            <div class="produtos">
-                <div class="content-section">
-                    <ul>
-                        <li title="Clique para ver a imagem" data-image="gi.jpg"  class="line">Kimonos ou Dogi</li>
-                        <li title="Clique para ver a imagem" data-image="camisa.png" class="line">Camisas</li>
-                        <li title="Clique para ver a imagem" data-image="jo_bokken.png" class="line">Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
-                        <li title="Clique para ver a imagem" data-image="novo_rumo.png"  class="line">Livro: Ebook Aikido - O seu caminho para um novo rumo. Escrito por Nelson Faria, praticante do Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section id="redes-sociais">
-            <h2>Redes Sociais</h2>
-            <div class="redes-sociais">
-                <div class="content-section">
-                    <p>Siga-nos nas redes sociais para ficar por dentro das novidades, eventos e conteúdos exclusivos:</p>
-                    <div class="social-icons">
-                        <a title="Página do instagram" href="https://instagram.com/daitanaikido" target="_blank">
-                            <img src="instagram.png" alt="Instagram" style="width: 48px; height: 48px;">
-                        </a>
-                        <a title="Página do facebook" href="https://facebook.com/Uerlison" target="_blank">
-                            <img src="facebook.svg" alt="Facebook" style="width: 48px; height: 48px;">
-                        </a>
-                        <a title="Página do youtube" href="https://www.youtube.com/@daitanaikido" target="_blank">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="width: 48px; height: 48px;">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+		<h2>Serviços</h2>
+		<div class="servicos">
+			<div class="content-section">
+				<ul>
+					<li class="service-item">
+						<img src="service1.jpeg" class="line" data-image="service1.jpeg" alt="Aulas de Aikido">
+						<p>Aulas de Aikido</p>
+					</li>
+					<li class="service-item">
+						<img src="intensivos.jpeg" class="line" data-image="intensivos.jpeg" alt="Treinos Intensivos">
+						<p>Treinos Intensivos</p>
+					</li>
+					<li class="service-item">
+						<img src="defesa_mulheres.jpeg" class="line" data-image="defesa_mulheres.jpeg" alt="Defesa Pessoal para Mulheres">
+						<p>Defesa Pessoal para Mulheres – projeto “Sexo Frágil? A Opção é Sua!”</p>
+					</li>
+					<li class="service-item">
+						<img src="ate_voce.jpeg" class="line" data-image="ate_voce.jpeg" alt="Aikido Até Você">
+						<p>Aikido Até Você – Aulas em Condomínios</p>
+					</li>
+					<li class="service-item">
+						<img src="aikido_empresa.jpeg" class="line" data-image="aikido_empresa.jpeg" alt="Aikido na sua Empresa">
+						<p>Aikido na sua Empresa – Atividade Laboral em SIPAT e afins</p>
+					</li>
+					<li class="service-item">
+						<img src="aikido_seguranca.jpeg" class="line" data-image="aikido_seguranca.jpeg" alt="Defesa Pessoal e Especialização para Forças de Segurança">
+						<p>Defesa Pessoal e Especialização para Forças de Segurança Pública e Privada – Imobilizações Táticas</p>
+					</li>
+					<li class="service-item">
+						<img src="aikido_kids.png" class="line" data-image="aikido_kids.png" alt="Aikido Kids">
+						<p>Aikido Kids – Aulas de Aikido para crianças no Dojo e em escolas</p>
+					</li>
+					<li class="service-item">
+						<img src="seguranca_vip.jpeg" class="line" data-image="seguranca_vip.jpeg"  alt="Segurança VIP">
+						<p>Segurança VIP</p>
+					</li>
+					<li class="service-item">
+						<img src="intensivo_2.jpeg" class="line" data-image="intensivo_2.jpeg" alt="Palestras">
+						<p>Palestras</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section id="produtos">
+		<h2>Produtos</h2>
+		<div class="produtos">
+			<div class="content-section">
+				<ul>
+					<li title="Clique para ver a imagem" data-image="gi.jpg" class="line">Kimonos ou Dogi</li>
+					<li title="Clique para ver a imagem" data-image="camisa.jpeg" class="line">Camisa Treinar e evoluir</li>
+					<li title="Clique para ver a imagem" data-image="camisa_aikido.jpeg" class="line">Camisa Aikido</li>
+					<li title="Clique para ver a imagem" data-image="jo_bokken.png" class="line">Kit armas de madeira: Bokken (espada de madeira), Jo (bastão de madeira), Tanto (faca de madeira)</li>
+					<li title="Clique para ver a imagem" data-image="novo_rumo.png"  class="line">Livro: Ebook Aikido - O seu caminho para um novo rumo. Escrito por Nelson Faria, praticante do Daitan Aikido. Disponível pelo <a href="https://daitanaikido.hotmart.host/pagina-de-vendas-db3aaccb-d22f-4871-bae3-81b546106596" target="_blank">link</a>.</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section id="redes-sociais">
+		<h2>Redes Sociais</h2>
+		<div class="redes-sociais">
+			<div class="content-section">
+				<p>Siga-nos nas redes sociais para ficar por dentro das novidades, eventos e conteúdos exclusivos:</p>
+				<div class="social-icons">
+					<a title="Página do instagram" href="https://instagram.com/daitanaikido" target="_blank">
+						<img src="instagram.png" alt="Instagram" style="width: 48px; height: 48px;">
+					</a>
+					<a title="Página do facebook" href="https://facebook.com/Uerlison" target="_blank">
+						<img src="facebook.svg" alt="Facebook" style="width: 48px; height: 48px;">
+					</a>
+					<a title="Página do youtube" href="https://www.youtube.com/@daitanaikido" target="_blank">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="width: 48px; height: 48px;">
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
     </div>
 
     <footer>
