feat: Atualizações site do daitan aikido

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -46,7 +46,7 @@
     <div class="container">
         <section id="aikido">
             <h2>Aikido</h2>
-            <div class="aikido">
+            <div class="aikido" class="justificado" >
                 <img src="morihei_ueshiba.png" alt="Prática de Aikido">
                 <div class="content-section">
                     <p>Aikido (em japonês: 合気道, aikidō) é uma arte marcial japonesa desenvolvida pelo mestre Morihei
@@ -71,7 +71,7 @@
 
         <section id="daitan-aikido">
             <h2>Daitan Aikido</h2>
-            <div class="about">
+            <div class="about justificado">
 				<img class="resize-img" src="daitan_aikido_2.jpg" alt="Logo Daitan Aikido">
                 <div class="content-section">
                     <p>Criado em 2022 pelo Sensei Uerlison Simões, o Daitan Aikido surgiu de uma paixão pela arte
@@ -89,7 +89,7 @@
 
         <section id="professores">
             <h2>Professores</h2>
-			<div class="professores">
+			<div class="professores justificado">
 				<img class="resize-img" src="sensei_uerlison_simoes.jpg" alt="Sensei Uerlison Simões">
                 <div class="content-section">
 					<p>Sensei Uerlison Simões – 3º Dan, iniciou a prática de Aikido em 2007 e se apaixonou pela arte.
@@ -102,7 +102,7 @@
                 </div>
             </div>
 			</br>
-            <div class="professores">
+            <div class="professores justificado" >
 				<img class="resize-img" src="sensei_cristiano.jpg" alt="Sensei Cristiano Tosta">
                 <div class="content-section">
                     <p>Sensei Cristiano Tosta – 1° Dan, iniciou a prática de Aikido em 2012. Capacitação e metodologia
@@ -117,7 +117,7 @@
                 </div>
             </div>
 			</br>
-			<div class="professores">
+			<div class="professores justificado">
 				<img class="resize-img" src="sensei_joao.png" alt="Sensei João">
                 <div class="content-section">
                     <p>Sensei João Ricardo - 1º Dan, iniciou a prática de Aikido em 2017, se apaixando pela arte e não parando desde então.
