feat: Ajustando reload de css

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,7 +9,7 @@
     <meta name="description" content="Daitan Aikido - Aikido: Treinar e Evoluir sempre. Aulas, serviços, e produtos relacionados ao Aikido.">
     <meta name="keywords" content="Aikido, Daitan Aikido, Artes Marciais, Defesa Pessoal, Bahia">
     <link rel="canonical" href="https://www.daitanaikido.com.br/">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
