feat: Botão para o evento do daitan itensivo

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -173,8 +173,9 @@
 						<p>Aulas de Aikido</p>
 					</li>
 					<li class="service-item">
-						<img src="intensivos.jpeg" class="line" data-image="intensivos.jpeg" alt="Treinos Intensivos">
-						<p>Treinos Intensivos</p>
+						<img src="intensivo_3.jpg" class="line" data-image="intensivo_3.jpg" alt="Treinos Intensivos">
+						<p>Intensivo Daitan Aikido 2024</p>
+						<a href="https://forms.gle/3fBjyr69W8MrP21q8" target="_blank" class="styled-link">Realize sua inscrição</a>
 					</li>
 					<li class="service-item">
 						<img src="defesa_mulheres.jpeg" class="line" data-image="defesa_mulheres.jpeg" alt="Defesa Pessoal para Mulheres">
