feat: Alterando o titulo do da página

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daitan Dojo - Aikido</title>
+    <title>Daitan Aikido</title>
     <link rel="icon" href="daitan_aikido.png" type="image/png">
     <meta name="description" content="Daitan Aikido - Aikido: Treinar e Evoluir sempre. Aulas, serviços, e produtos relacionados ao Aikido.">
     <meta name="keywords" content="Aikido, Daitan Aikido, Artes Marciais, Defesa Pessoal, Bahia">
