feat: Ajuste endereço do daitan

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -134,7 +134,7 @@
 				<ul class="dojos-list">
 					<li>
 						<div class="dojos-location">
-							<strong>Lauro de Freitas:</strong>&nbsp Clube da APPM, Av. José Leite, s/n, em frente ao Condomínio Family.
+							<strong>Lauro de Freitas:</strong>&nbsp Av. Brg. Alberto C.Matos, 499 - Sobreloja - Pitangueiras.
 						</div>
 						<div class="dojos-contact">
 							<a href="tel:+5571986225839">(71) 98622-5839</a>- Uerlison Simões Sensei
@@ -350,7 +350,7 @@
 
 		function initMap(location) {
 			var locations = {
-				'Lauro de Freitas': {lat: -12.88755, lng: -38.33600},
+				'Lauro de Freitas': {lat: -12.88763, lng: -38.31436},
 				'Salvador': {lat: -12.92294, lng: -38.35783},
 				'Feira de Santana': {lat: -12.22259, lng: -38.95055}
 			};
